--- a/signuppage/singup.css
+++ b/signuppage/singup.css
@@ -288,6 +288,7 @@ footer {
     position: relative; /* 푸터를 고정시킴 */
     bottom: 0; /* 화면 하단에 배치 */
     width: 100%; /* 너비를 100%로 설정하여 전체 폭을 차지하도록 함 */
+    margin-top: 70px;
 }
 
 .container {
