--- a/mypage/mypage.css
+++ b/mypage/mypage.css
@@ -158,6 +158,28 @@ body {
     padding: 20px; /* 콘텐츠 영역에 여백 추가 */
 
 }
+.status-accepted {
+    background-color: #4580F6; /* 파란색 배경 */
+    color: #ffffff; /* 하얀 글씨 */
+    padding: 5px 10px; /* 여백 추가 */
+    border-radius: 5px; /* 모서리를 둥글게 */
+    display: inline-block; /* 인라인 블록으로 설정 */
+}
+
+.status-pending {
+    background-color: #e0e0e0; /* 회색 배경 */
+    color: #000000; /* 검정 글씨 */
+    padding: 5px 10px; /* 여백 추가 */
+    border-radius: 5px; /* 모서리를 둥글게 */
+    display: inline-block; /* 인라인 블록으로 설정 */
+}
+.phone-info {
+    font-size: 1rem;
+    margin-bottom: 10px;
+    color: #666; /* 더 부드러운 텍스트 색상 */
+    font-family: 'Noto Sans KR', sans-serif;
+    font-weight: bold;
+}
 
 /* 매칭 옵션 버튼들 숨기기 */
 .matching-buttons {
@@ -186,7 +208,7 @@ body {
 }
 
 .matching-heading {
-    margin-left: 40px;
+    text-align: center;
 }
 
 #matching-info {
@@ -258,9 +280,11 @@ body {
 }
 
 .card-title {
+    margin-top: 0;
+    text-align: center;
     font-size: 1.2rem;
     font-weight: bold;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
     color: #333;
 }
 
@@ -268,6 +292,8 @@ body {
     font-size: 1rem;
     margin-bottom: 10px;
     color: #666; /* 더 부드러운 텍스트 색상 */
+    font-family: 'Noto Sans KR', sans-serif;
+    font-weight: bold;
 }
 
 .btn {
