--- a/mainpage.css
+++ b/mainpage.css
@@ -112,6 +112,7 @@ header {
         transform: translateY(0);
     }
 }
+
 .card.show {
     opacity: 1; /* 애니메이션 후 투명도를 1로 설정 */
     transform: translateY(0); /* 원래 위치로 이동 */
@@ -184,14 +185,27 @@ header {
 }
 
 --------------
+
+/* 모달 기본 스타일 */
+
 .modal {
     position: fixed;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     z-index: 10000; /* 다른 요소 위에 보이도록 함 */
-    display: none; /* 일단 숨김 */
+    background-color: #fff; /* 모달 배경 색상 */
+    padding: 20px; /* 모달 내부 여백 */
+    box-shadow: 0 2px 3px 0 rgba(34, 36, 38, 0.15); /* 모달 그림자 */
+    border-radius: 5px; /* 모달 모서리 둥글게 */
+    text-align: left; /* 텍스트 정렬 */
+    color: #000; /* 텍스트 색상 */
+    max-width: 90%; /* 모달 최대 너비 */
+    max-height: 90%; /* 모달 최대 높이 */
+    overflow-y: auto; /* 내용이 모달 높이를 초과할 경우 스크롤 표시 */
 }
+
+
 
 .modal_body {
     display: block;
@@ -212,6 +226,10 @@ header {
     z-index: 10000;
     margin-top: 40px;
 }
+.modal, .modal2 {
+    display: none; /* 초기 상태에서 모달을 숨김 */
+}
+
 .modal_h1 {
     font-family: 'Noto Sans KR',sans-serif;
 }
@@ -733,6 +751,7 @@ footer {
 
 .footer-bottom {
     margin-left: 20px;
+    margin-bottom: 20px;
     text-align: left;
     padding-top: 20px; /* 푸터 하단과 내용 사이의 간격 */
     border-top: 1px solid #ccc; /* 푸터 상단 경계선 */
@@ -744,6 +763,7 @@ footer {
     margin: 5px; /* 각 텍스트 사이의 간격 설정 */
     width: 50%; /* 부모 요소의 절반만큼 너비를 가짐 */
     vertical-align: top; /* 상단 정렬 */
+    font-size: 12px;
 }
 
 a {
@@ -768,7 +788,7 @@ a {
     position: relative; /* 상대 위치 설정 */
     width: calc(20% - 20px); /* 카드의 너비를 20%로 설정하고 간격을 고려하여 조정합니다. */
     margin: 10px; /* 카드 간의 간격을 조정합니다. */
-    height: 300px;
+    height: 350px;
     border: 1px solid #ccc; /* 카드 테두리 설정 */
     border-radius: 5px; /* 카드 테두리의 둥근 정도 설정 */
     padding: 10px; /* 카드 안의 콘텐츠와 테두리 간의 간격을 조정합니다. */
@@ -802,10 +822,11 @@ a {
     margin-bottom: 5px; /* 아래 여백 설정 */
 }
 
+
 .divider {
     /* 구분선 스타일 설정 */
     position: absolute; /* 절대 위치 설정 */
-    top: 60%; /* 카드의 중간에 위치 */
+    top: 55%; /* 카드의 중간에 위치 */
     left: 0; /* 왼쪽에 위치 */
     width: 100%; /* 가로 길이를 카드의 전체 너비로 설정 */
     height: 1px; /* 선의 높이 */
@@ -813,30 +834,39 @@ a {
     transform: translateY(-50%); /* 세로 가운데 정렬 */
 }
 .industry {
-    /* 직종 스타일 설정 */
     position: absolute; /* 절대 위치 설정 */
-    top: 65%; /* 카드의 중간에서부터 위치 */
+    top: 60%; /* 카드의 중간에서부터 위치 */
     left: 10px; /* 왼쪽 여백 설정 */
+    margin-bottom: 5px; /* 아래 여백 설정 */
+}
 
+.sub-industry {
+    position: absolute;
+    top: 70%; /* 카드의 중간에서부터 위치 */
+    left: 10px; /* 왼쪽 여백 설정 */
+    margin-bottom: 5px; /* 아래 여백 설정 */
 }
 
 .location {
-    /* 지역 스타일 설정 */
     position: absolute; /* 절대 위치 설정 */
-    top: 75%; /* 카드의 중간에서부터 위치 */
-    left: 10px;
-
+    top: 80%; /* 카드의 중간에서부터 위치 */
+    left: 10px; /* 왼쪽 여백 설정 */
 }
 
 .introduction {
-    font-size: 16px; /* 기업 소개 글씨 크기 */
-    font-weight: bold; /* 기업 소개 글씨 굵게 설정 */
+    font-size: 15px; /* 기업 소개 글씨 크기 */
     text-align: center; /* 가운데 정렬합니다. */
 }
 .introduction-content {
     display: inline-block; /* 내용을 가운데 정렬합니다. */
-    text-align: left; /* 내용을 왼쪽으로 정렬합니다. */
+    font-size: 1rem;
+    margin-bottom: 10px;
+    color: #666; /* 더 부드러운 텍스트 색상 */
+    font-family: 'Noto Sans KR', sans-serif;
+    font-weight: bold;
 }
+
+
 
 /* CSS 코드 */
 .long-introduction {
@@ -850,6 +880,7 @@ a {
     text-align: center; /* 가운데 정렬 */
     margin-bottom: 10px; /* 아래 여백 설정 */
 }
+
 
 /* 매칭 신청 버튼 스타일 */
 .match-apply-button {
